chore: Add enable native access to sbt (#582)